<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobeelizer Demo</string>
    
    <string name="create">Create</string>
    <string name="connect">Connect</string>
    <string name="explore">Explore</string>
    <string name="add">Add</string>
    <string name="addPhoto">Add photo</string>
    <string name="sync">Sync</string>
    <string name="close">Close</string>
    <string name="info">Information</string>
    <string name="delete">Delete item</string>
    
    <string name="synchronizing">Synchronizing&#8230;</string>
    <string name="loggingIn">Logging in&#8230;</string>
    <string name="synchronizationCompleted">Synchronization completed.</string>
    <string name="loginInfoText1">Create a new demo session</string>
    <string name="loginInfoText2">or connect to an existing one</string>

    <string name="titleBarExplore">EXPLORE</string>
    <string name="titleBarGettingStarted">GETTING STARTED</string>
    <string name="titleBarSimpleSync">SIMPLE SYNC</string>
    <string name="titleBarPhotoSync">PHOTO SYNC</string>
    <string name="titleBarPermissions">PERMISSIONS</string>
    <string name="titleBarConflicts">CONFLICTS</string>
    <string name="titleBarGraphsConflicts">GRAPH&#8217;S CONFLICTS</string>
    <string name="titleBarPushNotifications">PUSH NOTIFICATIONS</string>
    <string name="titleBarWhatNext">WHAT NEXT?</string>
    <string name="titleBarSessionCode">SESSION CODE</string>
    <string name="titleBarSessionCodeN">SESSION CODE: %s</string>
    
    <string name="createSessionCreating">Creating demo session&#8230;</string>
    <string name="createSessionCreated">Demo session has been created. Your session code is:</string>
    <string name="createSessionNextDevice">You will need this code to connect to other devices.</string>
    
    <string name="graphsConflictOrder">Order %s</string>
    <string name="graphsDetailsNew">New</string>
    <string name="graphsDetailsPending">Pending</string>
    <string name="graphsDetailsReady">Ready to ship</string>
    <string name="graphsDetailsShipped">Shipped</string>
    <string name="graphsDetailsReceived">Received</string>
    
    <string name="gettingStartedText">
        Mobeelizer is a Synchronization-as-a-Service for mobile developers. We strive to make it 
        ridiculously easy to get synchronization for mobile apps up and running, so you can focus 
        on creating mobile apps, without worrying about data exchange.\n\nWhen using Mobeelizer, we automatically take care about the backend, configuration and 
        complicated aspect of synchronization conflicts.\n\nVisit mobeelizer.com for more info.\n\nThis app contains examples of using mobeelizer in different scenarios. You can see how to 
        sync data, binary files or how to handle conflicts. It\'s only a small possibilities what 
        mobeelizer can do for you. So have fun!
    </string>
    
    <string name="whatNextText">
        So you\'ve seen how revolutionary mobeelizer is and what Synchronization-as-a-Service means for your app.\n\nNow it\'s time for you to code&amp;play
        with mobeelizer by yourself.\n\nVisit mobeelizer.com for more info.
    </string>
    
    <string name="footerWarning">
        Warning: Items marked with | were not synchronized, because other user edited them at the same time.
    </string>
    
    
    <!-- EXPLORE LIST VALUES -->
    <string-array name="exploreListValues">
        <item>About Us</item>
        <item>Simple Sync</item>
        <item>Files</item>
        <item>Permissions</item>
        <item>Conflicts</item>
        <item>Relation Conflicts</item>
        <item>Push Notifications</item>
        <item>What to do next?</item>
    </string-array>
    
    <!-- DIALOGS -->
    <string name="dialogErrorTitle">An error occurred</string>
    <string name="dialogSimpleSyncText">
        This example shows a simple way to share data between multiple users and devices. Add movies to the list 
        and sync them with the cloud. The other users will be able to see them on their devices.\n\nUse 
        &#8220;add&#8221; button to add new title to the list and &#8220;sync&#8221; button to synchronize data 
        with the cloud.
    </string>
    <string name="dialogTextPhotoSync">
        This example shows how to share binary data between multiple users and devices. Take photos and sync 
        them with the others.\n\nUse &#8220;add photo&#8221; button to take new photo and &#8220;sync&#8221; 
        button to synchronize it with the cloud.
    </string>
    <string name="dialogTextPermissions">
        This example shows how to protect your shared data. Add movies to the list and sync them with the cloud. 
        The movie&#8217;s director is a protected field, only You can see it.\n\nUse &#8220;add&#8221; button to 
        add new title to the list and &#8220;sync&#8221; button to synchronize data with the cloud.
    </string>
    <string name="dialogTextConflicts">
        This example shows conflicts arise when two users modify the same data. Add movies to the list and sync 
        them with the cloud. Next change the score of this movie on multiple devices. Try to sync.\n\nUse 
        &#8220;add&#8221; button to add new title to the list and &#8220;sync&#8221; button to synchronize 
        data with the cloud. The score of the movie can be changed by clicking on the &#8220;score&#8221; icon.
    </string>
    <string name="dialogTextGrapfsConflict">
        This example shows conflicts arise when two users modify related data. Add order and movies to the list 
        and sync them with the cloud. Next on one device change order&#8217;s status and on the other change, 
        add or remove, movies from this order. Try to sync.\n\nUse &#8220;add&#8221; button to add new order to 
        the list and &#8220;sync&#8221; button to synchronize data with the cloud. The status of the order can be 
        changed by clicking on the &#8220;status&#8221; icon. Use &#8220;plus&#8221; to add movies to order and 
        long-press to remove them.
    </string>
    
    <string name="dialogInfoAddText">Add new elements</string>
    <string name="dialogInfoSyncText1">Synchronize added elements with the cloud</string>
    <string name="dialogInfoChengeUserText">Now switch user or connect another device</string>
    <string name="dialogInfoSyncText2">Sync to see new elements</string>
    <string name="dialogInfoSyncText3">Add, sync, switch user, sync…</string>
    <string name="dialogInfoSyncText4">But do not sync data yet!</string>
    
    <string name="dialogSimpleSyncTitle">Simple way to share data…</string>
    <string name="dialogSimpleSyncText1">Exchange simple data between users.</string>
    <string name="dialogSimpleSyncText2">Now it\'s your turn! Try to add more records and exchange them between as many devices and users as you can find…</string>
    
    <string name="dialogFilesSyncTitle">Also simple way to share binaries…</string>
    <string name="dialogFilesSyncText1">Find out how easy data exchange can be!</string>
    <string name="dialogFilesSyncAddText">Add new images</string>
    
    <string name="dialogPermissionsSyncTitle">Protect your shared data…</string>
    <string name="dialogPermissionsSyncText1">In your app you can easily define who will see what.</string>
    <string name="dialogPermissionsSyncText2">See difference? That\'s right! Some data are accesible only to creator, some to everyone. But you can do so much more…</string>
    
    <string name="dialogConflictsSyncTitle">Warning, conflicts arise…</string>
    <string name="dialogConflictsSyncText1">Two users modify one record at the same time? You can easily cope with that!</string>
    <string name="dialogConflictsSyncText2">Choose one movie title that all users have. Now change movie rating and synchronize updated data…</string>
    <string name="dialogConflictsSyncText3">Modify the same record with another user and then synchronize…</string>
    <string name="dialogConflictsSyncText4">And… don\'t worry anymore. No data is lost! Your record is in conflict state, but it\'s easy to resolve it - although not in this demo…</string>
    
    <string name="dialogRelationConflictsSyncTitle">Relations, conflicts - no problem at all…</string>
    <string name="dialogRelationConflictsSyncText1">See how users can interfere with each other working on common Orders.</string>
    <string name="dialogRelationConflictsSyncText2">As in previous example - choose one order and change it\'s status, synchronize data…</string>
    <string name="dialogRelationConflictsSyncText3">Now using another user add or remove position in previously choosen order. Synchronize data.</string>
    <string name="dialogRelationConflictsSyncText4">Don\'t be afraid. Your orders are secure. Conflicts can also occour in more complicated structures - like orders and positions. Of course you can feel safe, we will handle them for you…</string>
    
    <string name="dialogPushNotificationsTitle">Notify users with minimum effort…</string>
    <string name="dialogPushNotificationsText1">You can simply send push notifications without thinking about operating systems and devices.</string>
    <string name="dialogPushNotificationsText2">Also you can also specify receiver of your notification. He will get it - on every device he\'s logged in (even if application is turned off).</string>
    
    <!-- MENU -->
    <string name="logout">Logout</string>
    <string name="nextExample">Next Example</string>
    
    
    <!-- DESCRIPTIONS -->
    <string name="d_loginLogo">Mobeelizer logo</string>
    <string name="d_titleBarButton">User type</string>
    <string name="d_infoButton">Information button</string>
    <string name="d_owner">Item owner</string>
    <string name="d_photo">Photo</string>
    <string name="d_itemIcon">Item photo</string>
    <string name="d_itemAdd">Add order item</string>
    <string name="d_itemRemove">Remove item</string>
    <string name="d_orderStatus">Order status</string>
    <string name="d_star">Rating star</string>
    
    
    <!-- LAYOUT TEXTS -->
    <string name="t_titleBarTitle">EXPLORE</string>
    <string name="t_titleBarSessionCode">SESSION CODE: 1234</string>
    <string name="t_sessionCode">1234</string>
    <string name="t_dialog_text">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore 
        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
        aliquip ex ea commodo consequat.
    </string>
    <string name="t_listItem">List item</string>
    <string name="switch_user_icon">Switch user icon</string>
    
    <!-- PUSH NOTIFICATIONS TEXTS -->
    <string name="pushNotificationsText1">Send to everyone</string>
    <string name="pushNotificationsText2">Sent to users</string>
    <string name="pushNotificationsButtonSendToAll">Sned push notification</string>
    <string name="pushNotificationsButtonSendToA">Send to A</string>
    <string name="pushNotificationsButtonSendToB">Send to B</string>
    
</resources>